# short-movie-generator

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  artifact_integrity.py  atomic_assets.py  audio_dynamics.py  audio_features.py  audio_separator.py  auto_animation_prompt.py  bg_cache.py  bgm_library.py  clip_library.py  composition_id.py  compositor.py  compositor_remotion.py  config.py  cost_estimator.py  elevenlabs_client.py  fal_runner.py  fal_video_client.py  furigana_store.py  gemini_dialogue_rewriter.py  imagen_client.py  io_utils.py  job_runner.py  job_store.py  kling_cache.py  lipsync_client.py  log_setup.py  main.py  part_registry_loader.py  per_character_tts.py  post_captions_gen.py  preflight.py  preview_server.py  progress_store.py  project_state.py  prompt_revise.py  (+10 more)
.claude/: settings.json
.github/: pull_request_template.md
actions/: confused_search.json  decisive_stand.json  fall_into_chair.json  focused_typing.json  lean_back_relief.json  look_at_phone.json  stand_thinking.json  surprise_pc.json  triumph_pose.json
analytics/: auto_tag.py  db.py  pending_queue.py  schema.sql
analyze/: __init__.py  cache.py  character_meta.py  compose.py  cost.py  intent_resolver.py  job.py  location.py  pipeline.py  progress.py  runner.py  store.py  style.py  suggestion_store.py  suggestion_yaml.py
arcs/: confusion_to_resolve.json  failure_to_pivot.json  low_to_high.json  problem_solution_celebration.json
autonomous/: __init__.py  dev_backlog.py  task_queue.py
common/: __init__.py  api_client.py  datetime_helpers.py
config/: __init__.py  api_keys.py  audio.py  cache.py  cost.py  qa.py  transformation_taxonomy.yaml  tts.py  visual.py
cost_tracking/: __init__.py  budget.py  estimator.py  pricebook.py  pricing.py  recorder.py  records.py  report.py
data/: bgm_catalog.json  furigana_dict.json  jobs.json  (+2 more)
(+743 files in other folders)
